[tool.poetry]
authors = ["ZCG-Coder <z-c-ge@outlook.com>"]
description = "The editor that edits"
name = "NWEdit"
version = "0.6-dev"
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
art = "^6.4"
Pillow = "^9.5.0"
Pygments = "^2.19.1"
PyTouchBar = "^0.2.1"
Send2Trash = "^1.8.3"
ttkthemes = "^3.2.2"
pyobjc-core = { version = "^11.0", markers = "sys_platform == 'darwin'" }  # Have to keep a legacy version
pyobjc-framework-Cocoa = { version = "^11.0", markers = "sys_platform == 'darwin'" }
tkterminal = "^0.1.0"
tkhtmlview = "^0.2.0"
mistune = "^3.1.2"
json5rw = "^0.2.2"
pyvips = "^2.2.3"
multipledispatch = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12"
pytest = "^8.3.4"
isort = "^6.0.1"
coverage = "^7.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportPropertyTypeMismatch = false
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
